@@ -15,11 +15,10 @@
  */
 package com.hivemq.edge.adapters.browse.file;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
-
 import com.hivemq.edge.adapters.browse.model.DeviceTagRow;
 import com.hivemq.edge.adapters.browse.model.FieldMappingInstruction;
+import org.junit.jupiter.api.Test;
+
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
@@ -29,7 +28,9 @@ import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.atomic.AtomicInteger;
-import org.junit.jupiter.api.Test;
+
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 class DeviceTagCsvSerializerTest {
 
@@ -54,8 +55,7 @@ class DeviceTagCsvSerializerTest {
                 .northboundTopicDefault("adapter/data/int32")
                 .southboundTopic("adapter/write/data/int32")
                 .southboundTopicDefault("adapter/write/data/int32")
-                .southboundFieldMapping(List.of(
-                        new FieldMappingInstruction("value", "value"),
+                .southboundFieldMapping(List.of(new FieldMappingInstruction("value", "value"),
                         new FieldMappingInstruction("status", "quality")))
                 .maxQos(1)
                 .messageExpiryInterval(3600L)
@@ -69,7 +69,7 @@ class DeviceTagCsvSerializerTest {
         final List<DeviceTagRow> result = serializer.deserialize(csv);
 
         assertThat(result).hasSize(1);
-        final DeviceTagRow deserialized = result.get(0);
+        final DeviceTagRow deserialized = result.getFirst();
         assertThat(deserialized.getNodePath()).isEqualTo(row.getNodePath());
         assertThat(deserialized.getNamespaceUri()).isEqualTo(row.getNamespaceUri());
         assertThat(deserialized.getNamespaceIndex()).isEqualTo(row.getNamespaceIndex());
@@ -93,33 +93,31 @@ class DeviceTagCsvSerializerTest {
 
     @Test
     void roundTrip_minimalRow() throws IOException {
-        final DeviceTagRow row = DeviceTagRow.builder()
-                .nodeId("ns=0;i=1")
-                .build();
+        final DeviceTagRow row = DeviceTagRow.builder().nodeId("ns=0;i=1").build();
 
         final byte[] csv = serializer.serialize(List.of(row));
         final List<DeviceTagRow> result = serializer.deserialize(csv);
 
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getNodeId()).isEqualTo("ns=0;i=1");
-        assertThat(result.get(0).getTagName()).isNull();
-        assertThat(result.get(0).getSouthboundFieldMapping()).isNull();
-        assertThat(result.get(0).getMqttUserProperties()).isNull();
+        assertThat(result.getFirst().getNodeId()).isEqualTo("ns=0;i=1");
+        assertThat(result.getFirst().getTagName()).isNull();
+        assertThat(result.getFirst().getSouthboundFieldMapping()).isNull();
+        assertThat(result.getFirst().getMqttUserProperties()).isNull();
     }
 
     @Test
     void roundTrip_multipleRows() throws IOException {
-        final List<DeviceTagRow> rows = List.of(
-                DeviceTagRow.builder().nodePath("/B").nodeId("ns=0;i=2").tagName("tag-b").build(),
-                DeviceTagRow.builder().nodePath("/A").nodeId("ns=0;i=1").tagName("tag-a").build(),
-                DeviceTagRow.builder().nodePath("/C").nodeId("ns=0;i=3").tagName("tag-c").build());
+        final List<DeviceTagRow> rows =
+                List.of(DeviceTagRow.builder().nodePath("/B").nodeId("ns=0;i=2").tagName("tag-b").build(),
+                        DeviceTagRow.builder().nodePath("/A").nodeId("ns=0;i=1").tagName("tag-a").build(),
+                        DeviceTagRow.builder().nodePath("/C").nodeId("ns=0;i=3").tagName("tag-c").build());
 
         final byte[] csv = serializer.serialize(rows);
         final List<DeviceTagRow> result = serializer.deserialize(csv);
 
         assertThat(result).hasSize(3);
         // Serialization sorts by nodePath ascending
-        assertThat(result.get(0).getNodePath()).isEqualTo("/A");
+        assertThat(result.getFirst().getNodePath()).isEqualTo("/A");
         assertThat(result.get(1).getNodePath()).isEqualTo("/B");
         assertThat(result.get(2).getNodePath()).isEqualTo("/C");
     }
@@ -135,16 +133,15 @@ class DeviceTagCsvSerializerTest {
 
     @Test
     void encodeFieldMapping_singleMapping() {
-        final String encoded = DeviceTagCsvSerializer.encodeFieldMapping(
-                List.of(new FieldMappingInstruction("src", "dst")));
+        final String encoded =
+                DeviceTagCsvSerializer.encodeFieldMapping(List.of(new FieldMappingInstruction("src", "dst")));
         assertThat(encoded).isEqualTo("src->dst");
     }
 
     @Test
     void encodeFieldMapping_multipleMappings() {
-        final String encoded = DeviceTagCsvSerializer.encodeFieldMapping(
-                List.of(new FieldMappingInstruction("a", "b"),
-                        new FieldMappingInstruction("c", "d")));
+        final String encoded = DeviceTagCsvSerializer.encodeFieldMapping(List.of(new FieldMappingInstruction("a", "b"),
+                new FieldMappingInstruction("c", "d")));
         assertThat(encoded).isEqualTo("a->b;c->d");
     }
 
@@ -162,8 +159,8 @@ class DeviceTagCsvSerializerTest {
     void decodeFieldMapping_singleMapping() {
         final List<FieldMappingInstruction> result = DeviceTagCsvSerializer.decodeFieldMapping("src->dst");
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).source()).isEqualTo("src");
-        assertThat(result.get(0).destination()).isEqualTo("dst");
+        assertThat(result.getFirst().source()).isEqualTo("src");
+        assertThat(result.getFirst().destination()).isEqualTo("dst");
     }
 
     @Test
@@ -180,15 +177,13 @@ class DeviceTagCsvSerializerTest {
 
     @Test
     void decodeFieldMapping_malformed() {
-        assertThatThrownBy(() -> DeviceTagCsvSerializer.decodeFieldMapping("noarrow"))
-                .isInstanceOf(IllegalArgumentException.class)
-                .hasMessageContaining("Invalid field mapping format");
+        assertThatThrownBy(() -> DeviceTagCsvSerializer.decodeFieldMapping("noarrow")).isInstanceOf(
+                IllegalArgumentException.class).hasMessageContaining("Invalid field mapping format");
     }
 
     @Test
     void encodeUserProperties_simple() {
-        final String encoded = DeviceTagCsvSerializer.encodeUserProperties(
-                Map.of("key", "value"));
+        final String encoded = DeviceTagCsvSerializer.encodeUserProperties(Map.of("key", "value"));
         assertThat(encoded).isEqualTo("key=value");
     }
 
@@ -208,23 +203,24 @@ class DeviceTagCsvSerializerTest {
 
     @Test
     void decodeUserProperties_malformed() {
-        assertThatThrownBy(() -> DeviceTagCsvSerializer.decodeUserProperties("noequals"))
-                .isInstanceOf(IllegalArgumentException.class)
-                .hasMessageContaining("Invalid user property format");
+        assertThatThrownBy(() -> DeviceTagCsvSerializer.decodeUserProperties("noequals")).isInstanceOf(
+                IllegalArgumentException.class).hasMessageContaining("Invalid user property format");
     }
 
     // --- Boolean parsing ---
 
     @Test
     void deserialize_booleanParsing() throws IOException {
-        final String csv = "node_path,node_id,tag_name,include_timestamp,include_tag_names,include_metadata\r\n"
-                + "/path,ns=0;i=1,tag1,true,false,TRUE\r\n"
-                + "/path2,ns=0;i=2,tag2,FALSE,True,false\r\n";
+        final String csv = """
+                node_path,node_id,tag_name,include_timestamp,include_tag_names,include_metadata\r
+                /path,ns=0;i=1,tag1,true,false,TRUE\r
+                /path2,ns=0;i=2,tag2,FALSE,True,false\r
+                """;
         final List<DeviceTagRow> result = serializer.deserialize(csv.getBytes(StandardCharsets.UTF_8));
         assertThat(result).hasSize(2);
-        assertThat(result.get(0).getIncludeTimestamp()).isTrue();
-        assertThat(result.get(0).getIncludeTagNames()).isFalse();
-        assertThat(result.get(0).getIncludeMetadata()).isTrue();
+        assertThat(result.getFirst().getIncludeTimestamp()).isTrue();
+        assertThat(result.getFirst().getIncludeTagNames()).isFalse();
+        assertThat(result.getFirst().getIncludeMetadata()).isTrue();
         assertThat(result.get(1).getIncludeTimestamp()).isFalse();
         assertThat(result.get(1).getIncludeTagNames()).isTrue();
         assertThat(result.get(1).getIncludeMetadata()).isFalse();
@@ -237,10 +233,10 @@ class DeviceTagCsvSerializerTest {
         final String csv = "node_id,tag_name\r\nns=0;i=1,my-tag\r\n";
         final List<DeviceTagRow> result = serializer.deserialize(csv.getBytes(StandardCharsets.UTF_8));
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getNodeId()).isEqualTo("ns=0;i=1");
-        assertThat(result.get(0).getTagName()).isEqualTo("my-tag");
-        assertThat(result.get(0).getNodePath()).isNull();
-        assertThat(result.get(0).getMaxQos()).isNull();
+        assertThat(result.getFirst().getNodeId()).isEqualTo("ns=0;i=1");
+        assertThat(result.getFirst().getTagName()).isEqualTo("my-tag");
+        assertThat(result.getFirst().getNodePath()).isNull();
+        assertThat(result.getFirst().getMaxQos()).isNull();
     }
 
     @Test
@@ -248,7 +244,7 @@ class DeviceTagCsvSerializerTest {
         final String csv = "node_id,tag_name,unknown_column\r\nns=0;i=1,my-tag,ignored\r\n";
         final List<DeviceTagRow> result = serializer.deserialize(csv.getBytes(StandardCharsets.UTF_8));
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getNodeId()).isEqualTo("ns=0;i=1");
+        assertThat(result.getFirst().getNodeId()).isEqualTo("ns=0;i=1");
     }
 
     @Test
@@ -256,8 +252,8 @@ class DeviceTagCsvSerializerTest {
         final String csv = "node_id,tag_name,max_qos\r\nns=0;i=1,,\r\n";
         final List<DeviceTagRow> result = serializer.deserialize(csv.getBytes(StandardCharsets.UTF_8));
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getTagName()).isNull();
-        assertThat(result.get(0).getMaxQos()).isNull();
+        assertThat(result.getFirst().getTagName()).isNull();
+        assertThat(result.getFirst().getMaxQos()).isNull();
     }
 
     // --- Wildcard preservation ---
@@ -278,10 +274,10 @@ class DeviceTagCsvSerializerTest {
         final List<DeviceTagRow> result = serializer.deserialize(csv);
 
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getTagName()).isEqualTo("*");
-        assertThat(result.get(0).getTagNameDefault()).isEqualTo("auto-tag");
-        assertThat(result.get(0).getNorthboundTopic()).isEqualTo("*");
-        assertThat(result.get(0).getSouthboundTopic()).isEqualTo("*");
+        assertThat(result.getFirst().getTagName()).isEqualTo("*");
+        assertThat(result.getFirst().getTagNameDefault()).isEqualTo("auto-tag");
+        assertThat(result.getFirst().getNorthboundTopic()).isEqualTo("*");
+        assertThat(result.getFirst().getSouthboundTopic()).isEqualTo("*");
     }
 
     // --- Large payload ---
@@ -325,41 +321,40 @@ class DeviceTagCsvSerializerTest {
     void concurrentSerialization_threadSafe() throws Exception {
         final int threadCount = 10;
         final int rowsPerThread = 100;
-        final ExecutorService executor = Executors.newFixedThreadPool(threadCount);
         final CountDownLatch startLatch = new CountDownLatch(1);
         final CountDownLatch doneLatch = new CountDownLatch(threadCount);
         final AtomicInteger errors = new AtomicInteger(0);
-
-        for (int t = 0; t < threadCount; t++) {
-            final int threadIdx = t;
-            executor.submit(() -> {
-                try {
-                    startLatch.await();
-                    final List<DeviceTagRow> rows = new ArrayList<>();
-                    for (int i = 0; i < rowsPerThread; i++) {
-                        rows.add(DeviceTagRow.builder()
-                                .nodePath("/Thread" + threadIdx + "/Node" + i)
-                                .nodeId("ns=2;i=" + (threadIdx * 1000 + i))
-                                .tagName("t" + threadIdx + "-tag-" + i)
-                                .build());
-                    }
-                    final byte[] csv = serializer.serialize(rows);
-                    final List<DeviceTagRow> result = serializer.deserialize(csv);
-                    if (result.size() != rowsPerThread) {
+        try (final ExecutorService executor = Executors.newFixedThreadPool(threadCount)) {
+            for (int t = 0; t < threadCount; t++) {
+                final int threadIdx = t;
+                executor.submit(() -> {
+                    try {
+                        startLatch.await();
+                        final List<DeviceTagRow> rows = new ArrayList<>();
+                        for (int i = 0; i < rowsPerThread; i++) {
+                            rows.add(DeviceTagRow.builder()
+                                    .nodePath("/Thread" + threadIdx + "/Node" + i)
+                                    .nodeId("ns=2;i=" + (threadIdx * 1000 + i))
+                                    .tagName("t" + threadIdx + "-tag-" + i)
+                                    .build());
+                        }
+                        final byte[] csv = serializer.serialize(rows);
+                        final List<DeviceTagRow> result = serializer.deserialize(csv);
+                        if (result.size() != rowsPerThread) {
+                            errors.incrementAndGet();
+                        }
+                    } catch (final Exception e) {
                         errors.incrementAndGet();
+                    } finally {
+                        doneLatch.countDown();
                     }
-                } catch (final Exception e) {
-                    errors.incrementAndGet();
-                } finally {
-                    doneLatch.countDown();
-                }
-            });
+                });
+            }
+
+            startLatch.countDown();
+            doneLatch.await();
+            executor.shutdown();
         }
-
-        startLatch.countDown();
-        doneLatch.await();
-        executor.shutdown();
-
         assertThat(errors.get()).isZero();
     }
 
@@ -368,21 +363,20 @@ class DeviceTagCsvSerializerTest {
     @Test
     void serialize_outputIsUtf8() throws IOException {
         final DeviceTagRow row = DeviceTagRow.builder()
-                .nodePath("/Objects/Data/Ger\u00e4t")
+                .nodePath("/Objects/Data/Gerät")
                 .nodeId("ns=2;i=1")
-                .tagDescription("M\u00e9triques de temp\u00e9rature")
+                .tagDescription("Métriques de température")
                 .build();
 
         final byte[] csv = serializer.serialize(List.of(row));
         final String csvStr = new String(csv, StandardCharsets.UTF_8);
-        assertThat(csvStr).contains("Ger\u00e4t");
-        assertThat(csvStr).contains("M\u00e9triques");
+        assertThat(csvStr).contains("Gerät");
+        assertThat(csvStr).contains("Métriques");
     }
 
     @Test
     void serialize_containsHeader() throws IOException {
-        final byte[] csv = serializer.serialize(List.of(
-                DeviceTagRow.builder().nodeId("ns=0;i=1").build()));
+        final byte[] csv = serializer.serialize(List.of(DeviceTagRow.builder().nodeId("ns=0;i=1").build()));
         final String csvStr = new String(csv, StandardCharsets.UTF_8);
         assertThat(csvStr).startsWith("node_path,namespace_uri,namespace_index,node_id");
     }
